<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.calculatorapp.MainActivity">

    <TextView
        android:id="@+id/helperText"
        style="@style/helperStyle"
        android:text="" />


    <TextView
        android:id="@+id/resultArea"
        style="@style/resultStyle"
        android:layout_below="@id/helperText"
        android:text="" />

    <LinearLayout style="@style/buttonBow">

        <LinearLayout style="@style/buttonColumn">

            <Button
                android:id="@+id/clearBtn"
                style="@style/buttonStyle"
                android:onClick="reset"
                android:text="@string/reset" />

            <Button
                android:id="@+id/sevenBtn"
                style="@style/buttonStyle"
                android:onClick="getNumberFromText"
                android:text="@string/seven" />

            <Button
                android:id="@+id/fourBtn"
                style="@style/buttonStyle"
                android:onClick="getNumberFromText"
                android:text="@string/four" />

            <Button
                android:id="@+id/oneBtn"
                style="@style/buttonStyle"
                android:onClick="getNumberFromText"
                android:text="@string/one" />

            <Button
                android:id="@+id/percentageBtn"
                style="@style/buttonStyle"
                android:onClick="percentage"
                android:text="@string/percentage" />

        </LinearLayout>

        <LinearLayout style="@style/buttonColumn">

            <Button
                android:id="@+id/deleteBtn"
                style="@style/buttonStyle"
                android:onClick="erase"
                android:text="@string/back" />

            <Button
                android:id="@+id/eightBtn"
                style="@style/buttonStyle"
                android:onClick="getNumberFromText"
                android:text="@string/eight" />

            <Button
                android:id="@+id/fiveBtn"
                style="@style/buttonStyle"
                android:onClick="getNumberFromText"
                android:text="@string/five" />

            <Button
                android:id="@+id/twoBtn"
                style="@style/buttonStyle"
                android:onClick="getNumberFromText"
                android:text="@string/two" />

            <Button
                android:id="@+id/zeroBtn"
                style="@style/buttonStyle"
                android:onClick="getNumberFromText"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout style="@style/buttonColumn">

            <Button
                android:id="@+id/divideBtn"
                style="@style/buttonStyle"
                android:onClick="operationSelect"
                android:text="@string/devide" />

            <Button
                android:id="@+id/nineBtn"
                style="@style/buttonStyle"
                android:onClick="getNumberFromText"
                android:text="@string/nine" />

            <Button
                android:id="@+id/sixBtn"
                style="@style/buttonStyle"
                android:onClick="getNumberFromText"
                android:text="@string/six" />

            <Button
                android:id="@+id/threeBtn"
                style="@style/buttonStyle"
                android:onClick="getNumberFromText"
                android:text="@string/three" />

            <Button
                android:id="@+id/dotBtn"
                style="@style/buttonStyle"
                android:onClick="decimalClicked"
                android:text="@string/dot" />

        </LinearLayout>

        <LinearLayout style="@style/buttonColumn">

            <Button
                android:id="@+id/multiBtn"
                style="@style/buttonStyle"
                android:onClick="operationSelect"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/minusBtn"
                style="@style/buttonStyle"
                android:onClick="operationSelect"
                android:text="@string/minus" />

            <Button
                android:id="@+id/plusBtn"
                style="@style/buttonStyle"
                android:onClick="operationSelect"
                android:text="@string/plus" />

            <Button
                android:id="@+id/equalBtn"
                style="@style/equalStyle"
                android:onClick="equal"
                android:text="@string/equal" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
